# m210-2020-match

./: .gitignore  CMakeLists.txt  README.md  UserConfig.txt  init  run  startTracking.sh
config/: m210.conf
inc/cmy/: cmy_detector.hpp  utils.hpp
inc/dji/: dji_flight_control.hpp
src/cmy/: cmy_detector.cpp  main.cpp  utils.cpp
src/dji/: dji_flight_control.cpp  dji_flight_sample.cpp  dji_linux_helpers.cpp
tkDnn/: CMakeLists.txt
tkDnn/demo/: demo.cpp
tkDnn/include/tkDNN/: DarknetParser.h  DetectionNN.h
yolo/: car.cfg  car.data  classes.names  coco.data
